==> zhangmeng5337/Hardware/soil FDR/code/FDR/Src/HAL/modbus.c <==
#include "modbus.h"
#include "main.h"
#include "crc.h"
#include "bsp.h"
#include "adc.h"
#include "eeprom.h"
#include "filter.h"

void RS485_Init(void)
{
    huart1.Instance = USART1;
    huart1.Init.BaudRate = modbus_usr.RS485_Baudrate;
    huart1.Init.WordLength = UART_WORDLENGTH_8B;
    huart1.Init.StopBits = UART_STOPBITS_1;
    huart1.Init.Parity = UART_PARITY_NONE;
    huart1.Init.Mode = UART_MODE_TX_RX;
    huart1.Init.HwFlowCtl = UART_HWCONTROL_NONE;
    huart1.Init.OverSampling = UART_OVERSAMPLING_16;
    switch(modbus_usr.RS485_Parity)
    {
    case 0:
        huart1.Init.Parity=UART_PARITY_NONE;
        break;//无校验
    case 1:
        huart1.Init.Parity=UART_PARITY_ODD;
        break;//奇校验
    case 2:
        huart1.Init.Parity=UART_PARITY_EVEN;
        break;//偶校验
    }
    if (HAL_UART_Init(&huart1) != HAL_OK)
    {
        Error_Handler();
    }
    HAL_GPIO_WritePin(GPIOA, RS485_EN1_Pin, GPIO_PIN_RESET);
    modbus_usr.RS485_TX_EN=0;//默认为接收模式
    HAL_UART_Receive_IT(&huart1, &res, 1);
    modbus_usr.RS485_Baudrate = 9600;


    // Timer7_Init();//定时器7初始化，用于监视空闲时间
    // Modbus_RegMap();//Modbus寄存器映射
}

void RS485_SendData(u8 *buff,u8 len)
{
    HAL_GPIO_WritePin(GPIOA, RS485_EN1_Pin, GPIO_PIN_SET);
    modbus_usr.RS485_TX_EN=1;//切换为发送模式
    //  while(len--)
    {
        HAL_UART_Transmit(&huart1,buff,len,100);
        //while(USART_GetFlagStatus(USART2,USART_FLAG_TXE)==RESET);//等待发送区为空
        // USART_SendData(USART2,*(buff++));
    }
    //while(USART_GetFlagStatus(USART2,USART_FLAG_TC)==RESET);//等待发送完成
}
